# tnn-miner-dev-free

./: .gitignore  CMakeLists.txt  run.sh
cmake/: astrobwtv3.cmake  monitor.cmake  setup.cmake  unset.cmake
include/: terminal.h  tnn-common.hpp
monitor/: README.md  angular.json  package-lock.json  package.json  post-build.js
monitor/src/: index.html  styles.scss
monitor/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts  paths.enum.ts
monitor/src/app/components/shared/quick-bar/: quick-bar.component.html  quick-bar.component.scss  quick-bar.component.spec.ts  quick-bar.component.ts
monitor/src/app/components/shared/quick-btn/: quick-btn.component.html  quick-btn.component.scss  quick-btn.component.spec.ts  quick-btn.component.ts
monitor/src/app/components/www/dashboard/: dashboard.component.html  dashboard.component.scss
monitor/src/app/services/theme/: theme.service.ts
monitor/src/app/styles/: _colors.scss  _dims.scss  _fonts.scss
monitoring/: index.html  main-ZFDJL75B.js
scripts/: build_all.ps1
src/: tnn-common.hpp
src/broadcast/: broadcastServer.cpp
src/coins/: dummy_miners.cpp  mine_spectre.cpp  miners.hpp
src/core/: algos.h  miner.cpp  miner.h  monitor.cpp  monitor.hpp
src/crypto/astrobwtv3/: astro_aarch64.cpp  astrobwtv3.cpp  astrotest.cpp
src/net/: net.cpp  net.hpp  sessions.hpp
src/net/spectre/: net_spectre_stratum.cpp
src/net/verus/: net_verus_stratum.cpp
